--- a/.github/workflows/build-and-make-release.yml
+++ b/.github/workflows/build-and-make-release.yml
@@ -39,8 +39,8 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
 
-    - name: Build with Gradle Wrapper
-      run: ./gradlew build
+    - name: Build with Gradle Wrapper (ShadowJar)
+      run: ./gradlew shadow
     - name: Create Release
       uses: ncipollo/release-action@v1.14.0
       env:
@@ -48,5 +48,5 @@ jobs:
       with:
         tag: ${{ inputs.tag }}
         name: PackGenerator-${{ inputs.tag }}
-        artifacts: 'build/libs/PackGenerator-0.1.jar'
+        artifacts: 'build/libs/PackGenerator.jar'
     
